--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dropzone": "^3.8.0",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "webpack": "^1.14.0"
   },
