--- a/package.json
+++ b/package.json
@@ -8,17 +8,23 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "material-ui": "^0.16.5",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-dropzone": "^3.8.0",
+    "react-google-maps": "^6.0.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.14.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "static-site-generator-webpack-plugin": "^3.1.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
