--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "scss-loader": "0.0.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0"
   },
   "devDependencies": {
-    "static-site-generator-webpack-plugin": "^3.1.0"
+    "node-sass": "^4.1.1",
+    "sass-loader": "^4.1.1",
+    "static-site-generator-webpack-plugin": "^3.1.0",
+    "webpack": "^1.14.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
