--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "haversine": "^1.0.1",
+    "json-loader": "^0.5.4",
     "material-ui": "^0.16.5",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
