--- a/package.json
+++ b/package.json
@@ -17,17 +17,15 @@
     "react-dom": "^15.4.1",
     "react-dropzone": "^3.8.0",
     "react-google-maps": "^6.0.1",
+    "react-joyride": "^1.10.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
-    "scss-loader": "0.0.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0"
   },
   "devDependencies": {
-    "node-sass": "^4.1.1",
-    "sass-loader": "^4.1.1",
     "static-site-generator-webpack-plugin": "^3.1.0",
     "webpack": "^1.14.0"
   },
